--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
-body {
-    background: red;
+@import url('https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
 }
